@@ -116,6 +116,7 @@ import static uk.gov.hmcts.ccd.definition.store.repository.FieldTypeUtils.BASE_P
 import static uk.gov.hmcts.ccd.definition.store.repository.FieldTypeUtils.BASE_POST_CODE;
 import static uk.gov.hmcts.ccd.definition.store.repository.FieldTypeUtils.BASE_RADIO_FIXED_LIST;
 import static uk.gov.hmcts.ccd.definition.store.repository.FieldTypeUtils.BASE_REGION;
+import static uk.gov.hmcts.ccd.definition.store.repository.FieldTypeUtils.BASE_RICH_TEXT_AREA;
 import static uk.gov.hmcts.ccd.definition.store.repository.FieldTypeUtils.BASE_TEXT;
 import static uk.gov.hmcts.ccd.definition.store.repository.FieldTypeUtils.BASE_TEXT_AREA;
 import static uk.gov.hmcts.ccd.definition.store.repository.FieldTypeUtils.BASE_WAYS_TO_PAY;
@@ -312,7 +313,7 @@ public class ImportServiceImplTest {
 
         AccessProfileEntity accessProfileEntity = new AccessProfileEntity();
         accessProfileEntity.setReference(ACCESS_PROFILE_1);
-        lenient().doReturn(Arrays.asList(accessProfileEntity)).when(accessProfileRepository).findAll();
+        lenient().doReturn(List.of(accessProfileEntity)).when(accessProfileRepository).findAll();
 
         // Configure spreadsheetValidator spy to do nothing by default (mock behavior)
         // Individual tests can use doCallRealMethod() to enable real validation when needed
@@ -576,6 +577,7 @@ public class ImportServiceImplTest {
             buildBaseType(BASE_MONEY_GBP),
             buildBaseType(BASE_PHONE_UK),
             buildBaseType(BASE_TEXT_AREA),
+            buildBaseType(BASE_RICH_TEXT_AREA),
             buildBaseType(BASE_COLLECTION),
             buildBaseType(BASE_DOCUMENT),
             buildBaseType(BASE_LABEL),
@@ -909,6 +911,7 @@ public class ImportServiceImplTest {
             buildBaseType(BASE_MONEY_GBP),
             buildBaseType(BASE_PHONE_UK),
             buildBaseType(BASE_TEXT_AREA),
+            buildBaseType(BASE_RICH_TEXT_AREA),
             buildBaseType(BASE_COLLECTION),
             buildBaseType(BASE_DOCUMENT),
             buildBaseType(BASE_LABEL),
